--- a/feh-1-master-009-10/009-10/03_Animation/01_Keyframes.html
+++ b/feh-1-master-009-10/009-10/03_Animation/01_Keyframes.html
@@ -16,13 +16,15 @@
            
         }
 
-        /*Правило @keyframes содержит имя анимации элемента, которое связывает правило и блок объявления элемента.*/
+        /*Правило @keyframes содержит имя анимации элемента,
+         которое связывает правило и блок объявления элемента.*/
         /*@-moz-keyframes animationName - Для Mozilla Firefox
         @-webkit-keyframes animationName - Google Chrome
         @-o-keyframes animationName - Opera*/
         @keyframes animationName {
 
-            /*Ключевые кадры создаются с помощью ключевых слов from и to, или процентного соотношения времени*/
+            /*Ключевые кадры создаются с помощью ключевых слов from и to,
+             или процентного соотношения времени*/
             from,
             to {
                 border: 7px solid black;
