--- a/feh-1-master-009-10/009-10/05_Intro_to_Bootstrap4/002_grid_system.html
+++ b/feh-1-master-009-10/009-10/05_Intro_to_Bootstrap4/002_grid_system.html
@@ -21,7 +21,9 @@
     <div class="container-fluid">
         <!-- Класс row описывает строку в разметке. -->
         <div class="row">
-            <!-- Класс col описывает коллонку. В 4-й версии система сетки была переработана. и применяя несколько коллонок в одной строке, они будут автоматически разделять свободное пространство между собой. -->
+            <!-- Класс col описывает коллонку. В 4-й версии система сетки была переработана.
+                 и применяя несколько коллонок в одной строке,
+                  они будут автоматически разделять свободное пространство между собой. -->
             <div class="col-12 col-sm-4 col-md-12">
                 Tincidunt integer eu augue augue nunc elit dolor, luctus placerat scelerisque euismod, iaculis eu lacus nunc mi elit, vehicula ut laoreet ac, aliquam sit amet justo nunc tempor, metus vel.
             </div>
