--- a/feh-1-master-007_Lesson 7/007_Lesson 7/007_Samples/001_Forms/001_form.html
+++ b/feh-1-master-007_Lesson 7/007_Lesson 7/007_Samples/001_Forms/001_form.html
@@ -10,8 +10,9 @@
         Формы используются для ввода и отправки данных.
         Используются следующие атрибуты:
         https://developer.mozilla.org/ru/docs/Web/HTTP/Methods/POST
-            - method    - устанавливает метод отправки данных на сервер. Значение post указывает на необходимость передачи данных через специальные заголовки.
-                        Значение get позволяет передать данные через строку запроса.
+            - method    - устанавливает метод отправки данных на сервер.
+                    Значение post указывает на необходимость передачи данных через специальные заголовки.
+                    Значение get позволяет передать данные через строку запроса.
             - action    - устанавливает адрес, на который передаются данные формы.
             - autocomplete - атрибут указывает браузеру нужно ли запоминать вводимые пользователем значения.
       -->
