--- a/feh-1-master-007_Lesson 7/007_Lesson 7/007_Samples/001_Forms/003_input.html
+++ b/feh-1-master-007_Lesson 7/007_Lesson 7/007_Samples/001_Forms/003_input.html
@@ -7,9 +7,11 @@
 </head>
 
 <body>
-    <!-- Для создания описания полей используются элементы label.  Метка связывается с полем посредством атрибута id. -->
+    <!-- Для создания описания полей используются элементы label.
+          Метка связывается с полем посредством атрибута id. -->
     <form method="post" action="./index.php">
-        <!-- атрибут accesskey позволяет установить комбинацию горячих клавиш, нажав на которые поле становится активным, то есть получает фокус.-->
+        <!-- атрибут accesskey позволяет установить комбинацию горячих клавиш,
+             нажав на которые поле становится активным, то есть получает фокус.-->
         <p>
             <label for="login" accesskey="k">Логин: </label>
             <input type="text"  id="login" placeholder="123" />
