--- a/feh-1-master-007_Lesson 7/007_Lesson 7/007_Samples/001_Forms/004_input.html
+++ b/feh-1-master-007_Lesson 7/007_Lesson 7/007_Samples/001_Forms/004_input.html
@@ -6,7 +6,8 @@
 </head>
 <body>
     <!--  
-        Флажок представляет собой элемент, который может находиться в одном из двух состояний: отмеченном и неотмеченном.
+        Флажок представляет собой элемент,
+         который может находиться в одном из двух состояний: отмеченном и неотмеченном.
       -->
     <form method="get" action="./index.php">
         <h3>Выберите курсы, которые хотите пройти:</h3>
